--- a/Find a Car Park.ipynb
+++ b/Find a Car Park.ipynb
@@ -42,7 +42,7 @@
     "  Thus we resized the pictures and took some samples from the data instead of all the images in the dataset. \n",
     "- In the next stage we did label encoding: 1 for free , 0 for full.\n",
     "- We normalize all the data in order to clean noise from the images.\n",
-    "- In addition, we defined a random seed in order to compare between the logistic model and the feed-forward model. \n",
+    "- In addition, we defined a random seed in order to compare between the logistic model and the MLP model. \n",
     "- After that , we divide the set into two parts: 80% for training and 20% for testing. We decided not to make validation data because of our low hardware.\n",
     "\n",
     "**Building the logistic regression model:**\n",
@@ -53,12 +53,12 @@
     "- The logistic model got 86% correct on the testing set after training.\n",
     "- According to the confusion matrix we can conclude it was more difficult for the logistic model to identify images of free parking than full parking images.  \n",
     "\n",
-    "**Building the feed-forward neural network model:**\n",
+    "**Building the MLP (Multi-Layer Perceptron) model:**\n",
     "\n",
     "-\tWe build the network with 2 hidden layers ; the first hidden layer has 128 neurons and the second has 256 neurons. \n",
     "-\tWe used the relu activation function to bring more power to the model.\n",
     "-\tWe tryed the dropout function to avoid over fitting but the train error was very high and it extended the time of the model training, so in the end we decided not to use it.\n",
-    "-\tThe feed-forward model got 90% correct on the testing set after training.\n",
+    "-\tThe MLP model got 90% correct on the testing set after training.\n",
     "-\tIn the beginning we use a low learning rate and because of that we never got to the minimum loss. In order to fix that we  choose a bigger learning  rate.\n",
     "-\tWe weren’t satisfied with the results and in order to improve them:\n",
     "    -\t we changed the amount of iterations - to avoid over fitting\n",
@@ -66,7 +66,7 @@
     "\n",
     "**Comparison to the logistic regression model:**\n",
     "\n",
-    "We've saw that the feed forward network got better results but it is more complex model than the logistic regression, therefore it took more time to train it.\n",
+    "We've saw that the MLP got better results but it is more complex model than the logistic regression, therefore it took more time to train it.\n",
     "\n",
     "\n",
     "You can find more specific details, screenshots and plots during the code below."
@@ -1165,7 +1165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Begin building the feed-forward neural network model using tensorflow.v1:"
+    "### Begin building the MLP model using tensorflow.v1:"
    ]
   },
   {
@@ -1306,7 +1306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start training the feed-forward neural network model:"
+    "### Start training the MLP model:"
    ]
   },
   {
@@ -1467,7 +1467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
