--- a/find a park - cnn.ipynb
+++ b/find a park - cnn.ipynb
@@ -1070,7 +1070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start training the feed-forward neural network model:"
+    "### Start training the CNN model:"
    ]
   },
   {
@@ -1275,13 +1275,6 @@
    "source": [
     "sess.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1300,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
